# scb-academy-azure-ai

./: .gitignore  README.md  app.py  delete_aisearch.py  pdf2text.py  pyproject.toml  readme.txt  requirements.txt  test_rag.py  text2aisearch.py
